# Genes

./: CMakeLists.txt
BasicTest/: CMakeLists.txt  basicTest.cpp
CameraTest/: CMakeLists.txt
CameraTest/src/: cameraTest.cpp
Genetic/: CMakeLists.txt
Genetic/inc/genetic/: genetic.h  operations.h  opt.h  tournament.h
Genetic/src/: operations.cpp
